Adding Keywords and Meta Tags

--- a/rs-technology-website/public/index.html
+++ b/rs-technology-website/public/index.html
@@ -15,6 +15,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta
+      name="keywords"
+      content="Best software company in Delhi Gurgaon, Best software company in India, Best software company in World, IT Consulting Services, Business Solutions, digital transformation consulting, Enterprise Business Consulting, Android Application, Web Development, Rhabdom, Mobile Application Development, Mobile App Development, Application Development Services, Information Technology, Technical Support, it Services, it Consultant, it Solutions, Managed it Services, Technology Consulting, Tech Solutions, it Service Management, Application Software - Rhabdom"
+    />
+    <meta property="og:site_name" content="Rhabdom Solution" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Rhabdom Solution Pvt Ltd." />
+    <meta property="og:description" content="RHABDOM Solutions was founded with a vision to push the boundaries and bring high quality technological solutions to everyone. We hold expertise in providing customized Web solutions for your business. We are relentless in moving boundaries and carry out this spirited attitude into Web solutions. Solutions that engage, inspire and make you think." />
+    <meta property="og:url" content="https://www.rhabdom.com/" />
+    <meta name="og:image" content="%PUBLIC_URL%/logo192.png"></meta>
+    <meta name="twitter:site" content="@Rhabdom1"></meta>
+    <meta name="twitter:card" content="summary"></meta>
+    <meta name="twitter:title" content="Rhabdom Solution Pvt Ltd."></meta>
+    <meta name="twitter:description" content="RHABDOM Solutions was founded with a vision to push the boundaries and bring high quality technological solutions to everyone. We hold expertise in providing customized Web solutions for your business. We are relentless in moving boundaries and carry out this spirited attitude into Web solutions. Solutions that engage, inspire and make you think."></meta>
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png"></meta>
     <title>RHABDOM Solutions</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <!-- Font Awesome icons (free version)-->
