--- a/rs-technology-website/public/index.html
+++ b/rs-technology-website/public/index.html
@@ -30,6 +30,7 @@
     <meta name="twitter:title" content="Rhabdom Solution Pvt Ltd."></meta>
     <meta name="twitter:description" content="RHABDOM Solutions was founded with a vision to push the boundaries and bring high quality technological solutions to everyone. We hold expertise in providing customized Web solutions for your business. We are relentless in moving boundaries and carry out this spirited attitude into Web solutions. Solutions that engage, inspire and make you think."></meta>
     <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png"></meta>
+    <meta name="google-site-verification" content="Yrbk9ikGuhusvs0wNC1kd6obdGpMywloNLKThZ4urgE" />
     <title>RHABDOM Solutions</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <!-- Font Awesome icons (free version)-->
