ushing Build.zip

--- a/rs-technology-website/public/index.html
+++ b/rs-technology-website/public/index.html
@@ -12,9 +12,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta charset="utf-8" />
+    <title>RHABDOM Solutions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="Rhabdom Solutions" />
+    <meta property="article:published_time" content="2021-04-20" />
     <meta
       name="keywords"
       content="Best software company in Delhi Gurgaon, Best software company in India, Best software company in World, IT Consulting Services, Business Solutions, digital transformation consulting, Enterprise Business Consulting, Android Application, Web Development, Rhabdom, Mobile Application Development, Mobile App Development, Application Development Services, Information Technology, Technical Support, it Services, it Consultant, it Solutions, Managed it Services, Technology Consulting, Tech Solutions, it Service Management, Application Software - Rhabdom"
@@ -31,7 +32,15 @@
     <meta name="twitter:description" content="RHABDOM Solutions was founded with a vision to push the boundaries and bring high quality technological solutions to everyone. We hold expertise in providing customized Web solutions for your business. We are relentless in moving boundaries and carry out this spirited attitude into Web solutions. Solutions that engage, inspire and make you think."></meta>
     <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png"></meta>
     <meta name="google-site-verification" content="Yrbk9ikGuhusvs0wNC1kd6obdGpMywloNLKThZ4urgE" />
-    <title>RHABDOM Solutions</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JJ6TZXR1KR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-JJ6TZXR1KR');
+    </script>
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
